<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/colorPrimary">

        <com.qmuiteam.qmui.widget.QMUIRadiusImageView
            android:id="@+id/iv_avatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            app:qmui_is_circle="true"
            app:srcCompat="@drawable/header01" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_avatar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            android:textColor="#FFFFFF"
            android:text="用户1" />

        <ImageView
            android:id="@+id/iv_message"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="20dp"
            android:layout_toStartOf="@+id/tv_message_count"
            app:srcCompat="@mipmap/message_grey_write" />

        <TextView
            android:id="@+id/tv_message_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="20dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="21dp"
            android:textColor="#FFFFFF"
            android:text="2" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_marginTop="20dp"
        android:background="#d6d6d6" />
    <RelativeLayout
        android:id="@+id/re_wallet"
        android:layout_width="match_parent"
        android:background="@drawable/btn_list_item_bg"
        android:layout_height="50dp">

        <ImageView
            android:id="@+id/ImageView01"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:alpha="0.2"
            android:src="@mipmap/cd1" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="15dp"
            android:layout_centerVertical="true"
            android:src="@mipmap/left_setting_grey" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/imageView3"
            android:text="@string/wallet" />

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="#d6d6d6" />
    <RelativeLayout
        android:id="@+id/re_ability"
        android:layout_width="match_parent"
        android:background="@drawable/btn_list_item_bg"
        android:layout_height="50dp">

        <ImageView
            android:id="@+id/ImageView05"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:alpha="0.2"
            android:src="@mipmap/cd1" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="15dp"
            android:layout_centerVertical="true"
            android:src="@mipmap/left_setting_grey" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/imageView5"
            android:text="@string/ability" />

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="#d6d6d6" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_marginTop="20dp"
        android:background="#d6d6d6" />
    <RelativeLayout
        android:id="@+id/re_help"
        android:layout_width="match_parent"
        android:background="@drawable/btn_list_item_bg"
        android:layout_height="50dp">

        <ImageView
            android:id="@+id/ImageView07"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:alpha="0.2"
            android:src="@mipmap/cd1" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="15dp"
            android:layout_centerVertical="true"
            android:src="@mipmap/left_setting_grey" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/imageView7"
            android:text="@string/use_help" />

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="#d6d6d6" />
    <RelativeLayout
        android:id="@+id/re_advice"
        android:layout_width="match_parent"
        android:background="@drawable/btn_list_item_bg"
        android:layout_height="50dp">

        <ImageView
            android:id="@+id/ImageView08"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:alpha="0.2"
            android:src="@mipmap/cd1" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="15dp"
            android:layout_centerVertical="true"
            android:src="@mipmap/left_setting_grey" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/imageView8"
            android:text="@string/advice" />

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="#d6d6d6" />


    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_marginTop="20dp"
        android:background="#d6d6d6" />
    <RelativeLayout
        android:id="@+id/re_setting"
        android:layout_width="match_parent"
        android:background="@drawable/btn_list_item_bg"
        android:layout_height="50dp">

        <ImageView
            android:id="@+id/ImageView06"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:alpha="0.2"
            android:src="@mipmap/cd1" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="15dp"
            android:layout_centerVertical="true"
            android:src="@mipmap/left_setting_grey" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/imageView6"
            android:text="@string/setting" />

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="#d6d6d6" />


</LinearLayout>